add some apis for admin and also add the admin dashboard

--- a/.env
+++ b/.env
@@ -8,3 +8,4 @@ DATABASE_URL="postgresql://postgres:password@localhost:5432/clinicalTrail"
 
 NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_dG91Y2hlZC1hc3AtMjIuY2xlcmsuYWNjb3VudHMuZGV2JA
 CLERK_SECRET_KEY=sk_test_Fyv1QLm8bDfIaTdKPHk8CJbvSMlSZLdcRSS152AhtL
+NEXT_PUBLIC_ADMIN_USER=user_2nNj4arI85upvLdolQ0y12mpADG
